--- a/Geopelia/App.xaml
+++ b/Geopelia/App.xaml
@@ -3,4 +3,15 @@
                              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                              xmlns:local="using:Geopelia"
                              xmlns:prism="using:Prism.Unity.Windows"
-                             RequestedTheme="Dark" />
+                             xmlns:viewModels="using:Geopelia.ViewModels"
+                             xmlns:fragments="using:Geopelia.Views.Fragments"
+                             RequestedTheme="Dark">
+    <Application.Resources>
+        <Style x:Key="StyleListViewItemWidthFill" TargetType="ListViewItem">
+            <Setter Property="HorizontalContentAlignment"
+                    Value="Stretch" />
+            <Setter Property="Margin"
+                    Value="0,0,0,0" />
+        </Style>
+    </Application.Resources>
+</prism:PrismUnityApplication>
