[modify] もっと読み込むボタンの改善 ・ユーザ画面 ツイート一覧最下部でのもっと読み込むボタンをいいかんじの見た目にした

--- a/Geopelia/Views/UserPage.xaml
+++ b/Geopelia/Views/UserPage.xaml
@@ -309,9 +309,6 @@
                                    TextWrapping="WrapWholeWords"
                                    Margin="0, 10" />
                     </Grid>
-
-                    <RelativePanel></RelativePanel>
-
                     <StackPanel Orientation="Horizontal"
                                 Width="Auto">
                         <RadioButton Content="Tweets"
@@ -330,16 +327,18 @@
             </ListView.Header>
             <ListView.Footer>
                 <Button Content="もっと読み込む"
-                        HorizontalAlignment="Center"
+                        HorizontalAlignment="Stretch"
+                        Padding="10"
                         Tapped="{x:Bind ViewModel.LoadPastUserTweetItems}" />
+
             </ListView.Footer>
         </ListView>
     </Grid>
-    <Page.BottomAppBar>
+    <!--<Page.BottomAppBar>
         <CommandBar ClosedDisplayMode="Compact">
             <AppBarButton Icon="Edit"
                           Label="Tweet">
             </AppBarButton>
         </CommandBar>
-    </Page.BottomAppBar>
+    </Page.BottomAppBar>-->
 </Page>
